Addin the first batch of documents for the 3rd exam

--- a/3rd_exam_files/methods_streams_aspen_2.org
+++ b/3rd_exam_files/methods_streams_aspen_2.org
@@ -1,14 +1,15 @@
-#+TITLE: Ρεύματα, Διεργασίες, Υπολογιστικά και Θερμοδυναμικά Μοντέλα - Σχεδιασμός Διεργασιών
-#+AUTHOR: Βιδιάνος Γιαννίτσης
+#+TITLE: Ρεύματα, Διεργασίες, Υπολογιστικά και Θερμοδυναμικά Μοντέλα - Σχεδιασμός Διεργασιών - 3η πρόοδος
+#+AUTHOR: Βιδιάνος Γιαννίτσης, Διονύσης Γιαννάτος, Αριστοτέλης Αργυρόπουλος
 #+LATEX_HEADER: \usepackage[a4paper, margin=3cm]{geometry}
 \renewcommand{\abstractname}{Περίληψη}
 \renewcommand{\tablename}{Πίνακας}
 \renewcommand{\figurename}{Σχήμα}
 \renewcommand\listingscaption{Κώδικας}
 
-\begin{abstract}
-Στο αρχείο αυτό θα παρουσιαστούν κάποιες πληροφορίες για τις διεργασίες του Steam Explosion και της Βιοαντίδρασης. Αυτές συμπεριλαμβάνουν τα ρεύματα που υπάρχουν και τα υπολογιστικά και θερμοδυναμικά μοντέλα που επιλέχθηκαν για αυτά.
-\end{abstract}
+\pagebreak
+
+* Ολοκληρωμένο Διάγραμμα Ροής
+Για την πρόοδο αυτή, έχουμε το ολοκληρωμένο διάγραμμα ροής της διεργασίας απεικονισμένο σχηματικά. Καθώς το διάγραμμα αυτό έγινε σε χαρτί Α3 με landscape configuration, θα πρέπει να γίνει πολύ zoom out για να μπορέσει να χωρέσει αυτό στο κείμενο αυτό το οποίο είναι Α4. Για αυτό, το διάγραμμα μπορεί να βρεθεί [[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/Diagrams/complete_flowsheet.pdf][εδώ]]. 
 
 * Steam Explosion
 To steam explosion είναι η πρώτη διεργασία που χρησιμοποιείται με βάση το διάγραμμα ροής της διεργασίας. Σκοπός του είναι να μπορέσει με χρήση ατμού σε υψηλή πίεση και θερμοκρασία να κάνει ένα πρώτο διαχωρισμό της βιομάζας. Συγκεκριμένα, διώχνει το σημαντικότερο ποσοστό της ημικυτταρίνης η οποία είναι η πιό υδατοδιαλυτή και θερμοευαίσθητη μεταξύ αυτής, της κυτταρίνης και της λιγνίνης.
@@ -17,9 +18,11 @@ To steam explosion είναι η πρώτη διεργασία που χρησι
 
 Στην έξοδο υπάρχουν τρία ρεύματα. Το ένα ρεύμα έχει όλη την κυτταρίνη και τη λιγνίνη οι οποίες δεν διασπάστηκαν θερμικά. Οι ενώσεις αυτές ορίστηκαν στο Aspen ως Nonconventional compounds και τα δεδομένα που απαιτούνται βρέθηκαν από τη βάση δεδομένων [[https://phyllis.nl/Browse/Standard/ECN-Phyllis#][Phyllis2]]. Το δεύτερο είναι η διαλυμένη ημικυτταρίνη που έχει αυτουδρολυθεί στο περιβάλλον της έκρηξης ατμού παράγοντας ξυλόζη, άλλες πεντόζες και εξόζες (καθώς ήταν όλες μικρές ποσότητες, υπολογίστηκαν υποθέτοντας ότι όλες οι ζάχαρες που δεν είναι ξυλόζη στο ρεύμα αυτό είναι αραβινόζη), διάφορες φαινολικές ενώσεις από την διάσπαση της λιγνίνης (για τον ίδιο λόγο θεωρήθηκαν όλες φαινόλη). Η σύσταση του ρεύματος αυτού υπάρχει στην βιβλιογραφία [[cite:&fernandez-bolanosSteamexplosionOliveStones2001]] . Το τρίτο ρεύμα είναι αέριο. Κατά την έκρηξη ατμού, υπάρχει απώλεια μάζας από την τροφοδοσία μέχρι τα δύο παραπάνω ρεύματα εξόδου. Αυτό συμβαίνει διότι η βιομάζα είναι θερμοευαίσθητη και ένα κομμάτι της διασπάται θερμικά. Για να μην γίνει ολοκληρωμένη ανάλυση του κλάσματος που διασπάστηκε, θεωρήθηκε πως όλη η αρχική υγρασία έγινε νερό (το οποίο με βάση την θερμοδυναμική κατανέμεται και στην υγρή και στην αέρια φάση σε ένα βαθμό), όλο το άζωτο της βιομάζας απελευθερώθηκε ως αέριο και οι υπόλοιπες απώλειες αποτελούν παραγωγή CO_2.
 
-Ο αντιδραστήρας του Steam Explosion ορίστηκε ως ένας RYield, καθώς δεν ορίζεται κάποια κινητική για την διεργασία αυτή, αλλά ξέρουμε βιβλιογραφικά τα ρεύματα εξόδου [[cite:&fernandez-bolanosSteamexplosionOliveStones2001;&fernandez-bolanosCharacterizationLigninObtained1999]] . Το θερμοδυναμικό μοντέλο που επιλέχθηκε είναι το μοντέλο SRK καθώς το σύστημα είναι ένα χημικό σύστημα σε υψηλή πίεση και ένα από τα μοντέλα που προτείνει το method assistant του Aspen για τέτοια συστήματα είναι το SRK.
+Ο αντιδραστήρας του Steam Explosion ορίστηκε ως ένας RYield, καθώς δεν ορίζεται κάποια κινητική για την διεργασία αυτή, αλλά ξέρουμε βιβλιογραφικά τα ρεύματα εξόδου [[cite:&fernandez-bolanosSteamexplosionOliveStones2001;&fernandez-bolanosCharacterizationLigninObtained1999]]. Το θερμοδυναμικό μοντέλο που επιλέχθηκε είναι το μοντέλο SRK καθώς το σύστημα είναι ένα χημικό σύστημα σε υψηλή πίεση και ένα από τα μοντέλα που προτείνει το method assistant του Aspen για τέτοια συστήματα είναι το SRK.
 
-Για περισσότερες πληροφορίες κοιτάξτε το αρχείο [[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/Aspen/steam_explosion.org][αυτό]] . Το σχετικό αρχείο του Aspen βρίσκεται [[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/Aspen/steam_explosion_3phases.apwz][εδώ]]. Παρακάτω φαίνονται οι πληροφορίες αυτές και πινακοποιημένες
+Για περισσότερες πληροφορίες κοιτάξτε το αρχείο [[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/Aspen/steam_explosion.org][αυτό]] . Το σχετικό αρχείο του Aspen βρίσκεται [[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/Aspen/steam_explosion_3phases.apwz][εδώ]]. Παρακάτω φαίνονται οι πληροφορίες αυτές και πινακοποιημένες.
+
+\pagebreak
 
 #+CAPTION: Πληροφορίες σχετικά με την διεργασία της έκρηξης ατμού
 |---------------------------------------------|
@@ -42,6 +45,99 @@ To steam explosion είναι η πρώτη διεργασία που χρησι
 ** Απορίες
 1. Μας ενδιαφέρει να "καθαρίσουμε" το υδατοδιαλυτό ρεύμα ώστε να έχει μόνο ξυλόζη (από την οποία παράγεται η κυκλοπεντανόνη) ή δεν χρειάζεται να ασχοληθούμε.
 2. Η προσομοίωση στον RYield τρέχει με Warning πως δεν ισχύουν τα ισοζύγια μάζας για C, H, N. Αυτό είναι πιθανόν να συμβαίνει λόγω συνδυασμού πολλών βιβλιογραφικών δεδομένων (επειδή δεν βρέθηκε άρθρο που να δίνει όλα τα απαιτούμενα δεδομένα). Λόγω αυτού, η προσομοίωση δίνει τα αναμενόμενα αποτελέσματα με το Warning αυτό. Πειράζει να μην ασχοληθούμε περαιτέρω με το warning αυτό καθώς δεν υπάρχει κάποιος εύκολος τρόπος να το ρυθμίσουμε;
+
+* Διαχωρισμός Κυτταρίνης και Λιγνίνης
+Η διεργασία αυτή αφορά τον διαχωρισμό κυτταρίνης και λιγνίνης μετά την έκρηξη ατμού καθώς είναι και οι δύο δυσδιάλυτες στον ατμό. Με βάση την βιβλιογραφία [[cite:&rodriguezOliveStoneAttractive2008]], μπορεί να γίνει μία αλκαλική εκχύλιση των στερεών, στην οποία, η λιγνίνη θα διαλυθεί ενώ η κυτταρίνη θα παραμείνει ως υπολειπόμενο στερεό. Για την εκχύλιση χρησιμοποιείται υδατικό
+διάλυμα υδροξειδίου του νατρίου σε 50% κατά βάρος. Αυτή η διεργασία είναι απαραίτητη για την ανάκτηση της λιγνίνης και για την καλύτερη λειτουργία των ενζύμων της υδρόλυσης της κυτταρίνης.
+
+Ως είσοδος θεωρείται το κλάσμα λιγνίνης και κυτταρίνης που εξέρχεται από
+τον αντιδραστήρα της έκρηξης ατμού και το υδατικό διάλυμα υδροξειδίου,
+ενώ ή έξοδος αποτελείται από την καθαρισμένη κυτταρίνη και την υδατική φάση που έχει διάλυμα υδροξειδίου του νατρίου και διαλυτοποιημένη λιγνίνη.  
+
+Για την μοντελοποίηση αυτής της διεργασίας, δεν βρέθηκε κάποια
+αντίστοιχη διεργασία στο Aspen Plus, άρα χρησιμοποιήθηκε ο αντιδραστήρας
+είδους Swash, ο οποίος μοντελοποιεί την διαδικασία της έκπλυσης στερεού,
+και το θερμοδυναμικό μοντέλο που χρησιμοποιήθηκε ήταν το ELECNRTL, το
+οποίο προτάθηκε από το Method Assistant του Aspen λόγω ύπαρξης
+ηλεκτρολύτη στο νερό.
+
+Διαπιστώθηκε πως στην έξοδο δεν υπήρχε καθόλου διαλυτοποιημένη λιγνίνη
+στο ρεύμα εξόδου, το οποίο αποτελούταν εντελώς από νερό και υδροξείδιο
+νατρίου. Είναι πιθανό το Aspen Plus, χωρίς δεδομένα για την
+διαλυτοποίηση της λιγνίνης, να μην μπορεί να την προσομοιάσει, οδηγώντας
+σε αυτήν την αστοχία.
+
+Παρακάτω καταγράφονται συνοπτικά οι πληροφορίες αυτής της διεργασίας.
+
+#+CAPTION: Πληροφορίες σχετικά με την διεργασία της αλκαλικής εκχύλισης
+|---------------------------------------------------------------|
+| Αλκαλική Εκχύλιση Λιγνίνης-Κυτταρίνης                         |
+|---------------------------------------------------------------|
+| Είδος Αντιδραστήρα - SWash                                    |
+| Θερμοδυναμικό Μοντέλο - ELECNRTL                              |
+| Ρεύματα:                                                      |
+|---------------------------------------------------------------|
+| Είσοδος: Στερεή Λιγνίνη και Κυτταρίνη, Νερό (Ρεύμα 1)         |
+| Υδατικό Διάλυμα NaOH (Ρεύμα 2)                                |
+|---------------------------------------------------------------|
+| Έξοδος: Στερεή κυτταρίνη με μικρή ποσότητα λιγνίνης (Ρεύμα 1) |
+| Υδατικό διάλυμα NaOH με διαλυτοποιημένη την                   |
+| λιγνίνη της τροφοδοσίας (Ρεύμα 2)                             |
+|---------------------------------------------------------------|
+
+** Απορίες
+1. Καθώς η δοκιμή που έγινε για την διεργασία δεν πέτυχε, έχετε μήπως εσείς κάποια ιδέα για το πως να περάσουμε την διεργασία αυτή στο Aspen. Μία ιδέα μας είναι να βάλουμε μία κλασσική στήλη εκχύλισης (παρότι αυτή υποθέτει εκχύλιση υγρού-υγρού) και να δούμε αν θα τρέξει. Αλλά αυτό είναι πιθανόν να μην δουλέψει.
+2. Στην περίπτωση που κάνουμε σωστά την προσομοίωση της εκχύλισης υγρού-στερεού, πιστεύουμε πως υπάρχει και πάλι πιθανότητα να μην δουλέψει καθώς η λιγνίνη έχει οριστεί ως non-conventional compound και μάλλον το Aspen δεν μπορεί να αναγνωρίσει ότι η λιγνίνη είναι διαλυτή στο καυστικό νάτριο. Έχετε κάποια ιδέα για το τι μπορούμε να κάνουμε;
+
+* Αντιδραστήρας Σακχαροποίησης
+Ο αντιδραστήρας της ενζυμικής σακχαροποίησης αποτελεί την τρίτη
+διεργασία στην σειρά, μετά τις διεργασίες έκρηξης ατμού και εκχύλισης με
+διάλυμα υδροξειδίου του νατρίου για την αφαίρεση περίσσειας λιγνίνης.
+
+Ως είσοδος θεωρείται το προϊόν της διεργασίας εκχύλισης, δηλαδή η
+κυτταρίνη με την λιγνίνη και ένα μεγάλο ποσό νερού που θα χρησιμοποιηθεί
+για να διαλύσει την γλυκόζη. Παράλληλα, το ρεύμα εισόδου θεωρείται
+πως δεν περιέχει υδροξείδιο του νατρίου για την απλοποίηση των υπολογισμών. Βέβαια, καθώς η κυτταρινή δεν είναι διαλυτή στο NaOH, αυτή η παραδοχή είναι καλή, καθώς ελάχιστη ποσότητα διαλύτη δεν θα πάει στην φάση της λιγνίνης.
+
+Η λιγνίνη και η κυτταρίνη ορίζονται ως Non-conventional solids στο
+Aspen, και τα βιβλιογραφικά δεδομένα για τον ορισμό των ιδιοτήτων τους
+βρέθηκαν από την [[https://phyllis.nl/Browse/Standard/ECN-Phyllis][βάση δεδομένων Phyllis]].
+
+Στην έξοδο έχουμε ως υγρό την γλυκόζη που έχει προκύψει από την
+σακχαροποίηση και την στερεή κυτταρίνη και λιγνίνη, που θα διαχωριστούν
+από το υγρό και θα επιστρέψουν στον αντιδραστήρα για περεταίρω υδρόλυση.
+Παράλληλα, εξέρχεται και μια μεγάλη ποσότητα νερού για να διαλύσει την
+γλυκόζη.
+
+Παρά το γεγονός πως έχει βρεθεί η κινητική της αντίδρασης ενζυμικής
+σακχαροποίησης από την βιβλιογραφία [[cite:&kadamDevelopmentValidationKinetic2004]], το μοντέλο αυτό είναι αρκετά
+περίπλοκο, και δεν ενδέχεται απλοποίηση και εισαγωγή στο Aspen εύκολα,
+κυρίως λόγω της πολυμερικής φύσης της κυτταρίνης. Γι' αυτό το λόγο,
+προτιμήθηκε η χρήση βιβλιογραφικών δεδομένων για την εύρεση της απόδοσης
+της αντίδρασης, τουλάχιστον μέχρι να μπορέσει να απλοποιηθεί το μοντέλο
+σε ικανοποιητικό βαθμό και να οριστεί κατάλληλα η κυτταρίνη. Η απόδοση
+της αντίδρασης, σύμφωνα με την βιβλιογραφία, αποδίδει 87.7% γλυκόζη από
+την εισαγόμενη κυτταρίνη μετά από παραμονή 72 ωρών. Η λιγνίνη και το
+νερό θεωρούνται ως αδρανή.
+
+Για αυτό τον λόγο, ο αντιδραστήρας ορίστηκε ως RYield, καθώς δεν απαιτεί
+την εισαγωγή κάποιας κινητικής. Εφόσον το σύστημα λειτουργεί σε χαμηλή
+πίεση (1 bar), χρησιμοποιήθηκε το θερμοδυναμικό μοντέλο NRTL, εφόσον
+προτάθηκε και από το Method Assistant του Aspen.
+
+Παρακάτω καταγράφονται συνοπτικά οι πληροφορίες αυτής της διεργασίας.
+
+#+CAPTION: Πληροφορίες σχετικά με την διεργασία της ενζυμικής σακχαροποίησης
+|-----------------------+----------------------------------------------------|
+| Διεργασία             | Ενζυμική Σακχαροποίηση                             |
+|-----------------------+----------------------------------------------------|
+| Είδος Αντιδραστήρα    | RYield                                             |
+| Θερμοδυναμικό Μοντέλο | NRTL                                               |
+|-----------------------+----------------------------------------------------|
+| Ρεύματα:              | Είσοδος: Στερεά (λιγνίνη, κυτταρίνη), Νερό         |
+|-----------------------+----------------------------------------------------|
+|                       | Έξοδος: Στερεά (λιγνίνη, κυτταρίνη), Νερό, Γλυκόζη |
+|-----------------------+----------------------------------------------------|
 
 * Βιοαντιδραστήρας Παραγωγής Γλυκερόλης
 Ο βιοαντιδραστήρας αυτός είναι μία από τις βασικές διεργασίες της εργασίας. Σκοπός του είναι να παράξει γλυκερόλη από γλυκόζη μέσω μικροοργανισμών. Επιλέχθηκε η χρήση του μικροοργανισμού C. glycerinogenes για την διεργασία αυτή και για αυτόν βρέθηκαν δύο βασικά πειράματα τα οποία βοήθησαν στην προσομοίωση του αντιδραστήρα [[cite:&zhugeGlycerolProductionNovel2001;&jinByproductFormationNovel2003]] . Αρχικά έγινε μία απλοποιημένη προσομοίωση όπου υποτέθηκε πως γλυκόζη και οξυγόνο δίνουν γλυκερόλη, διοξείδιο του άνθρακα και νερό και μόλις περάστηκε αυτή στο Aspen, δοκιμάστηκε η προσομοίωση της συνολικής αντίδρασης, όπου λαμβάνει υπόψην την βιομάζα, την πηγή αζώτου και τα παραπροιόντα.
@@ -100,8 +196,29 @@ To steam explosion είναι η πρώτη διεργασία που χρησι
 ** Απορίες
 1. Λόγω των ελάχιστων δεδομένων που υπάρχουν για την αντίδραση, όπως θεωρώ έγινε κατανοητό, η προσομοίωση δεν ήταν ιδιαίτερα ακριβής ή ολοκληρωμένη. Θεωρείται αξίζει να την λάβουμε υπόψην στο τελικό διάγραμμα ροής, ή δεν αξίζει τον κόπο;
 
+* Καθαρισμός Γλυκερόλης
+Μετά την διήθηση και την απομάκρυνση των αζωτούχων, υπάρχουν στο ρεύμα αιθανόλη, οξικό οξύ και γλυκερόλη διαλυμένα σε νερό. Η αιθανόλη και το οξικό οξύ είναι πολύ πτητικές ενώσεις σε σχέση με τη γλυκερόλη για αυτό μπορούν να απομακρυνθούν εύκολα με ένα flash. To flash καταφέρνει να διαχωρίσει το ρεύμα και στον πυθμένα υπάρχει διάλυμα γλυκερόλης-νερού σε σύσταση 74-26. Για να γίνει αυτό, η τροφοδοσία μπήκε στους 150 \( ^oC \) και το flash λειτουργούσε σε θερμοκρασία 140 \( ^oC \) και πίεση 1 atm.
+
+Για τον διαχωρισμό αυτών χρησιμοποιήθηκε μία αποστακτική στήλη. Η προσομοίωση έγινε αρχικά σε dstwu κολώνα και έπειτα σε radfrac με στόχο το προιόν πυθμένα να είναι 0.9999 γλυκερόλη. Τα αποτελέσματα της προσομοίωσης έδειξαν πως η στήλη μπορεί να λειτουργήσει στις ίδιες συνθήκες με το flash, με πτώση πίεσης κατά μήκους της στήλης 0.1 atm (0.95 atm στην κορυφή και 1.05 atm στον πυθμένα). Οι βαθμίδες της στήλης είναι 4 ενώ η τροφοδοσία μπαίνει πάνω από την δεύτερη. Τέλος, o λόγος αναρροής στην στήλη είναι R = 0.16.
+
+Παρακάτω παρατίθενται πινακοποιημένες πληροφορίες για την προσομοίωση.
+
+#+CAPTION: Πληροφορίες σχετικά με τον καθαρισμό της γλυκερόλης
+|---------------------------------------------------------|
+| Καθαρισμός Γλυκερόλης                                   |
+|---------------------------------------------------------|
+| Θερμοδυναμικό Μοντέλο - NRTL-HOC                        |
+| Μοντέλα Διαχωριστήρων - Flash και Radfrac               |
+| Ρεύματα:                                                |
+|---------------------------------------------------------|
+| Υδατικό διάλυμα οξικού οξέος, αιθανόλης και γλυκερόλης  |
+|---------------------------------------------------------|
+| Καθαρή γλυκερόλη, νερό και υδατικό διάλυμα οξικού οξέος |
+| και αιθανόλης                                           |
+|---------------------------------------------------------|
+
 * Γενικές απορίες
-1. Προσομοιώνοντας ξεχωριστά την κάθε διεργασία έχουμε επιλέξει διαφορετικά μοντέλα για την κάθε αντίδραση ανάλογα με τις συνθήκες στις οποίες διεξάγονται και τις ενώσεις που παίρνουν μέρος. Έχει χρησιμοποιηθεί SRK για τα συστήματα υψηλής πίεσης (πχ Steam Explosion), NRTL-HOC για τα συστήματα όπου υπάρχει οργανικό οξύ (βιοαντιδραστήρας και καθαρισμός της γλυκερόλης) και NRTL για τα υπόλοιπα. Θεωρείται θα δημιουργήσει πρόβλημα αυτό όταν προσπαθήσουμε να ενώσουμε όλες τις διεργασίες;
+1. Προσομοιώνοντας ξεχωριστά την κάθε διεργασία έχουμε επιλέξει διαφορετικά μοντέλα για την κάθε αντίδραση ανάλογα με τις συνθήκες στις οποίες διεξάγονται και τις ενώσεις που παίρνουν μέρος. Έχει χρησιμοποιηθεί SRK για τα συστήματα υψηλής πίεσης (πχ Steam Explosion), NRTL-HOC για τα συστήματα όπου υπάρχει οργανικό οξύ (βιοαντιδραστήρας και καθαρισμός της γλυκερόλης) και NRTL για τα υπόλοιπα. Είδαμε στο UI του Aspen πως υπάρχει τρόπος να αλλάξουμε το θερμοδυναμικό μοντέλο για τις επιμέρους διεργασίες. Θεωρείται θα δημιουργήσει πρόβλημα αυτό όταν προσπαθήσουμε να ενώσουμε όλες τις διεργασίες;
 
 * Βιβλιογραφία
 bibliography:~/Sync/My_Library.bib
