--- a/3rd_exam_files/methods_streams_aspen_2.tex
+++ b/3rd_exam_files/methods_streams_aspen_2.tex
@@ -1,4 +1,4 @@
-% Created 2022-12-07 Τετ 19:03
+% Created 2022-12-08 Πεμ 20:27
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -27,12 +27,12 @@
 \usepackage{chemfig}
 \usepackage{svg}
 \usepackage[a4paper, margin=3cm]{geometry}
-\author{Βιδιάνος Γιαννίτσης}
+\author{Βιδιάνος Γιαννίτσης, Διονύσης Γιαννάτος, Αριστοτέλης Αργυρόπουλος}
 \date{\today}
-\title{Ρεύματα, Διεργασίες, Υπολογιστικά και Θερμοδυναμικά Μοντέλα - Σχεδιασμός Διεργασιών}
+\title{Ρεύματα, Διεργασίες, Υπολογιστικά και Θερμοδυναμικά Μοντέλα - Σχεδιασμός Διεργασιών - 3η πρόοδος}
 \hypersetup{
- pdfauthor={Βιδιάνος Γιαννίτσης},
- pdftitle={Ρεύματα, Διεργασίες, Υπολογιστικά και Θερμοδυναμικά Μοντέλα - Σχεδιασμός Διεργασιών},
+ pdfauthor={Βιδιάνος Γιαννίτσης, Διονύσης Γιαννάτος, Αριστοτέλης Αργυρόπουλος},
+ pdftitle={Ρεύματα, Διεργασίες, Υπολογιστικά και Θερμοδυναμικά Μοντέλα - Σχεδιασμός Διεργασιών - 3η πρόοδος},
  pdfkeywords={},
  pdfsubject={},
  pdfcreator={Emacs 28.2 (Org mode 9.5.5)}, 
@@ -47,21 +47,25 @@
 \renewcommand{\figurename}{Σχήμα}
 \renewcommand\listingscaption{Κώδικας}
 
-\begin{abstract}
-Στο αρχείο αυτό θα παρουσιαστούν κάποιες πληροφορίες για τις διεργασίες του Steam Explosion και της Βιοαντίδρασης. Αυτές συμπεριλαμβάνουν τα ρεύματα που υπάρχουν και τα υπολογιστικά και θερμοδυναμικά μοντέλα που επιλέχθηκαν για αυτά.
-\end{abstract}
+\pagebreak
+
+\section{Ολοκληρωμένο Διάγραμμα Ροής}
+\label{sec:org67913a3}
+Για την πρόοδο αυτή, έχουμε το ολοκληρωμένο διάγραμμα ροής της διεργασίας απεικονισμένο σχηματικά. Καθώς το διάγραμμα αυτό έγινε σε χαρτί Α3 με landscape configuration, θα πρέπει να γίνει πολύ zoom out για να μπορέσει να χωρέσει αυτό στο κείμενο αυτό το οποίο είναι Α4. Για αυτό, το διάγραμμα μπορεί να βρεθεί \href{https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/Diagrams/complete\_flowsheet.pdf}{εδώ}. 
 
 \section{Steam Explosion}
-\label{sec:org13fc8b3}
+\label{sec:org90d2719}
 To steam explosion είναι η πρώτη διεργασία που χρησιμοποιείται με βάση το διάγραμμα ροής της διεργασίας. Σκοπός του είναι να μπορέσει με χρήση ατμού σε υψηλή πίεση και θερμοκρασία να κάνει ένα πρώτο διαχωρισμό της βιομάζας. Συγκεκριμένα, διώχνει το σημαντικότερο ποσοστό της ημικυτταρίνης η οποία είναι η πιό υδατοδιαλυτή και θερμοευαίσθητη μεταξύ αυτής, της κυτταρίνης και της λιγνίνης.
 
 Το ρεύμα εισόδου είναι 200000 τόνοι πυρηνόξυλο το οποίο ορίστηκε ως ένα Nonconventional component και τα στοιχεία που απαιτούνται για αυτό (proximate \& ultimate analysis) βρέθηκαν βιβλιογραφικά \cite{koutsomitopoulouPreparationCharacterizationOlive2014,gonzalezCombustionOptimisationBiomass2004} 
 
 Στην έξοδο υπάρχουν τρία ρεύματα. Το ένα ρεύμα έχει όλη την κυτταρίνη και τη λιγνίνη οι οποίες δεν διασπάστηκαν θερμικά. Οι ενώσεις αυτές ορίστηκαν στο Aspen ως Nonconventional compounds και τα δεδομένα που απαιτούνται βρέθηκαν από τη βάση δεδομένων \href{https://phyllis.nl/Browse/Standard/ECN-Phyllis\#}{Phyllis2}. Το δεύτερο είναι η διαλυμένη ημικυτταρίνη που έχει αυτουδρολυθεί στο περιβάλλον της έκρηξης ατμού παράγοντας ξυλόζη, άλλες πεντόζες και εξόζες (καθώς ήταν όλες μικρές ποσότητες, υπολογίστηκαν υποθέτοντας ότι όλες οι ζάχαρες που δεν είναι ξυλόζη στο ρεύμα αυτό είναι αραβινόζη), διάφορες φαινολικές ενώσεις από την διάσπαση της λιγνίνης (για τον ίδιο λόγο θεωρήθηκαν όλες φαινόλη). Η σύσταση του ρεύματος αυτού υπάρχει στην βιβλιογραφία \cite{fernandez-bolanosSteamexplosionOliveStones2001} . Το τρίτο ρεύμα είναι αέριο. Κατά την έκρηξη ατμού, υπάρχει απώλεια μάζας από την τροφοδοσία μέχρι τα δύο παραπάνω ρεύματα εξόδου. Αυτό συμβαίνει διότι η βιομάζα είναι θερμοευαίσθητη και ένα κομμάτι της διασπάται θερμικά. Για να μην γίνει ολοκληρωμένη ανάλυση του κλάσματος που διασπάστηκε, θεωρήθηκε πως όλη η αρχική υγρασία έγινε νερό (το οποίο με βάση την θερμοδυναμική κατανέμεται και στην υγρή και στην αέρια φάση σε ένα βαθμό), όλο το άζωτο της βιομάζας απελευθερώθηκε ως αέριο και οι υπόλοιπες απώλειες αποτελούν παραγωγή CO\textsubscript{2}.
 
-Ο αντιδραστήρας του Steam Explosion ορίστηκε ως ένας RYield, καθώς δεν ορίζεται κάποια κινητική για την διεργασία αυτή, αλλά ξέρουμε βιβλιογραφικά τα ρεύματα εξόδου \cite{fernandez-bolanosSteamexplosionOliveStones2001,fernandez-bolanosCharacterizationLigninObtained1999} . Το θερμοδυναμικό μοντέλο που επιλέχθηκε είναι το μοντέλο SRK καθώς το σύστημα είναι ένα χημικό σύστημα σε υψηλή πίεση και ένα από τα μοντέλα που προτείνει το method assistant του Aspen για τέτοια συστήματα είναι το SRK.
+Ο αντιδραστήρας του Steam Explosion ορίστηκε ως ένας RYield, καθώς δεν ορίζεται κάποια κινητική για την διεργασία αυτή, αλλά ξέρουμε βιβλιογραφικά τα ρεύματα εξόδου \cite{fernandez-bolanosSteamexplosionOliveStones2001,fernandez-bolanosCharacterizationLigninObtained1999}. Το θερμοδυναμικό μοντέλο που επιλέχθηκε είναι το μοντέλο SRK καθώς το σύστημα είναι ένα χημικό σύστημα σε υψηλή πίεση και ένα από τα μοντέλα που προτείνει το method assistant του Aspen για τέτοια συστήματα είναι το SRK.
 
-Για περισσότερες πληροφορίες κοιτάξτε το αρχείο \href{https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/Aspen/steam\_explosion.org}{αυτό} . Το σχετικό αρχείο του Aspen βρίσκεται \href{https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/Aspen/steam\_explosion\_3phases.apwz}{εδώ}. Παρακάτω φαίνονται οι πληροφορίες αυτές και πινακοποιημένες
+Για περισσότερες πληροφορίες κοιτάξτε το αρχείο \href{https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/Aspen/steam\_explosion.org}{αυτό} . Το σχετικό αρχείο του Aspen βρίσκεται \href{https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/Aspen/steam\_explosion\_3phases.apwz}{εδώ}. Παρακάτω φαίνονται οι πληροφορίες αυτές και πινακοποιημένες.
+
+\pagebreak
 
 \begin{table}[htbp]
 \caption{Πληροφορίες σχετικά με την διεργασία της έκρηξης ατμού}
@@ -87,14 +91,122 @@ Steam Explosion\\
 \end{table}
 
 \subsection{Απορίες}
-\label{sec:org3bf3496}
+\label{sec:orgaecd35f}
 \begin{enumerate}
 \item Μας ενδιαφέρει να "καθαρίσουμε" το υδατοδιαλυτό ρεύμα ώστε να έχει μόνο ξυλόζη (από την οποία παράγεται η κυκλοπεντανόνη) ή δεν χρειάζεται να ασχοληθούμε.
 \item Η προσομοίωση στον RYield τρέχει με Warning πως δεν ισχύουν τα ισοζύγια μάζας για C, H, N. Αυτό είναι πιθανόν να συμβαίνει λόγω συνδυασμού πολλών βιβλιογραφικών δεδομένων (επειδή δεν βρέθηκε άρθρο που να δίνει όλα τα απαιτούμενα δεδομένα). Λόγω αυτού, η προσομοίωση δίνει τα αναμενόμενα αποτελέσματα με το Warning αυτό. Πειράζει να μην ασχοληθούμε περαιτέρω με το warning αυτό καθώς δεν υπάρχει κάποιος εύκολος τρόπος να το ρυθμίσουμε;
 \end{enumerate}
 
+\section{Διαχωρισμός Κυτταρίνης και Λιγνίνης}
+\label{sec:org5fe03e1}
+Η διεργασία αυτή αφορά τον διαχωρισμό κυτταρίνης και λιγνίνης μετά την έκρηξη ατμού καθώς είναι και οι δύο δυσδιάλυτες στον ατμό. Με βάση την βιβλιογραφία \cite{rodriguezOliveStoneAttractive2008}, μπορεί να γίνει μία αλκαλική εκχύλιση των στερεών, στην οποία, η λιγνίνη θα διαλυθεί ενώ η κυτταρίνη θα παραμείνει ως υπολειπόμενο στερεό. Για την εκχύλιση χρησιμοποιείται υδατικό
+διάλυμα υδροξειδίου του νατρίου σε 50\% κατά βάρος. Αυτή η διεργασία είναι απαραίτητη για την ανάκτηση της λιγνίνης και για την καλύτερη λειτουργία των ενζύμων της υδρόλυσης της κυτταρίνης.
+
+Ως είσοδος θεωρείται το κλάσμα λιγνίνης και κυτταρίνης που εξέρχεται από
+τον αντιδραστήρα της έκρηξης ατμού και το υδατικό διάλυμα υδροξειδίου,
+ενώ ή έξοδος αποτελείται από την καθαρισμένη κυτταρίνη και την υδατική φάση που έχει διάλυμα υδροξειδίου του νατρίου και διαλυτοποιημένη λιγνίνη.  
+
+Για την μοντελοποίηση αυτής της διεργασίας, δεν βρέθηκε κάποια
+αντίστοιχη διεργασία στο Aspen Plus, άρα χρησιμοποιήθηκε ο αντιδραστήρας
+είδους Swash, ο οποίος μοντελοποιεί την διαδικασία της έκπλυσης στερεού,
+και το θερμοδυναμικό μοντέλο που χρησιμοποιήθηκε ήταν το ELECNRTL, το
+οποίο προτάθηκε από το Method Assistant του Aspen λόγω ύπαρξης
+ηλεκτρολύτη στο νερό.
+
+Διαπιστώθηκε πως στην έξοδο δεν υπήρχε καθόλου διαλυτοποιημένη λιγνίνη
+στο ρεύμα εξόδου, το οποίο αποτελούταν εντελώς από νερό και υδροξείδιο
+νατρίου. Είναι πιθανό το Aspen Plus, χωρίς δεδομένα για την
+διαλυτοποίηση της λιγνίνης, να μην μπορεί να την προσομοιάσει, οδηγώντας
+σε αυτήν την αστοχία.
+
+Παρακάτω καταγράφονται συνοπτικά οι πληροφορίες αυτής της διεργασίας.
+
+\begin{table}[htbp]
+\caption{Πληροφορίες σχετικά με την διεργασία της αλκαλικής εκχύλισης}
+\centering
+\begin{tabular}{l}
+\hline
+Αλκαλική Εκχύλιση Λιγνίνης-Κυτταρίνης\\
+\hline
+Είδος Αντιδραστήρα - SWash\\
+Θερμοδυναμικό Μοντέλο - ELECNRTL\\
+Ρεύματα:\\
+\hline
+Είσοδος: Στερεή Λιγνίνη και Κυτταρίνη, Νερό (Ρεύμα 1)\\
+Υδατικό Διάλυμα NaOH (Ρεύμα 2)\\
+\hline
+Έξοδος: Στερεή κυτταρίνη με μικρή ποσότητα λιγνίνης (Ρεύμα 1)\\
+Υδατικό διάλυμα NaOH με διαλυτοποιημένη την\\
+λιγνίνη της τροφοδοσίας (Ρεύμα 2)\\
+\hline
+\end{tabular}
+\end{table}
+
+\subsection{Απορίες}
+\label{sec:org0d9391e}
+\begin{enumerate}
+\item Καθώς η δοκιμή που έγινε για την διεργασία δεν πέτυχε, έχετε μήπως εσείς κάποια ιδέα για το πως να περάσουμε την διεργασία αυτή στο Aspen. Μία ιδέα μας είναι να βάλουμε μία κλασσική στήλη εκχύλισης (παρότι αυτή υποθέτει εκχύλιση υγρού-υγρού) και να δούμε αν θα τρέξει. Αλλά αυτό είναι πιθανόν να μην δουλέψει.
+\item Στην περίπτωση που κάνουμε σωστά την προσομοίωση της εκχύλισης υγρού-στερεού, πιστεύουμε πως υπάρχει και πάλι πιθανότητα να μην δουλέψει καθώς η λιγνίνη έχει οριστεί ως non-conventional compound και μάλλον το Aspen δεν μπορεί να αναγνωρίσει ότι η λιγνίνη είναι διαλυτή στο καυστικό νάτριο. Έχετε κάποια ιδέα για το τι μπορούμε να κάνουμε;
+\end{enumerate}
+
+\section{Αντιδραστήρας Σακχαροποίησης}
+\label{sec:org3261978}
+Ο αντιδραστήρας της ενζυμικής σακχαροποίησης αποτελεί την τρίτη
+διεργασία στην σειρά, μετά τις διεργασίες έκρηξης ατμού και εκχύλισης με
+διάλυμα υδροξειδίου του νατρίου για την αφαίρεση περίσσειας λιγνίνης.
+
+Ως είσοδος θεωρείται το προϊόν της διεργασίας εκχύλισης, δηλαδή η
+κυτταρίνη με την λιγνίνη και ένα μεγάλο ποσό νερού που θα χρησιμοποιηθεί
+για να διαλύσει την γλυκόζη. Παράλληλα, το ρεύμα εισόδου θεωρείται
+πως δεν περιέχει υδροξείδιο του νατρίου για την απλοποίηση των υπολογισμών. Βέβαια, καθώς η κυτταρινή δεν είναι διαλυτή στο NaOH, αυτή η παραδοχή είναι καλή, καθώς ελάχιστη ποσότητα διαλύτη δεν θα πάει στην φάση της λιγνίνης.
+
+Η λιγνίνη και η κυτταρίνη ορίζονται ως Non-conventional solids στο
+Aspen, και τα βιβλιογραφικά δεδομένα για τον ορισμό των ιδιοτήτων τους
+βρέθηκαν από την \href{https://phyllis.nl/Browse/Standard/ECN-Phyllis}{βάση δεδομένων Phyllis}.
+
+Στην έξοδο έχουμε ως υγρό την γλυκόζη που έχει προκύψει από την
+σακχαροποίηση και την στερεή κυτταρίνη και λιγνίνη, που θα διαχωριστούν
+από το υγρό και θα επιστρέψουν στον αντιδραστήρα για περεταίρω υδρόλυση.
+Παράλληλα, εξέρχεται και μια μεγάλη ποσότητα νερού για να διαλύσει την
+γλυκόζη.
+
+Παρά το γεγονός πως έχει βρεθεί η κινητική της αντίδρασης ενζυμικής
+σακχαροποίησης από την βιβλιογραφία \cite{kadamDevelopmentValidationKinetic2004}, το μοντέλο αυτό είναι αρκετά
+περίπλοκο, και δεν ενδέχεται απλοποίηση και εισαγωγή στο Aspen εύκολα,
+κυρίως λόγω της πολυμερικής φύσης της κυτταρίνης. Γι' αυτό το λόγο,
+προτιμήθηκε η χρήση βιβλιογραφικών δεδομένων για την εύρεση της απόδοσης
+της αντίδρασης, τουλάχιστον μέχρι να μπορέσει να απλοποιηθεί το μοντέλο
+σε ικανοποιητικό βαθμό και να οριστεί κατάλληλα η κυτταρίνη. Η απόδοση
+της αντίδρασης, σύμφωνα με την βιβλιογραφία, αποδίδει 87.7\% γλυκόζη από
+την εισαγόμενη κυτταρίνη μετά από παραμονή 72 ωρών. Η λιγνίνη και το
+νερό θεωρούνται ως αδρανή.
+
+Για αυτό τον λόγο, ο αντιδραστήρας ορίστηκε ως RYield, καθώς δεν απαιτεί
+την εισαγωγή κάποιας κινητικής. Εφόσον το σύστημα λειτουργεί σε χαμηλή
+πίεση (1 bar), χρησιμοποιήθηκε το θερμοδυναμικό μοντέλο NRTL, εφόσον
+προτάθηκε και από το Method Assistant του Aspen.
+
+Παρακάτω καταγράφονται συνοπτικά οι πληροφορίες αυτής της διεργασίας.
+
+\begin{table}[htbp]
+\caption{Πληροφορίες σχετικά με την διεργασία της ενζυμικής σακχαροποίησης}
+\centering
+\begin{tabular}{ll}
+\hline
+Διεργασία & Ενζυμική Σακχαροποίηση\\
+\hline
+Είδος Αντιδραστήρα & RYield\\
+Θερμοδυναμικό Μοντέλο & NRTL\\
+\hline
+Ρεύματα: & Είσοδος: Στερεά (λιγνίνη, κυτταρίνη), Νερό\\
+\hline
+ & Έξοδος: Στερεά (λιγνίνη, κυτταρίνη), Νερό, Γλυκόζη\\
+\hline
+\end{tabular}
+\end{table}
+
 \section{Βιοαντιδραστήρας Παραγωγής Γλυκερόλης}
-\label{sec:orgb476901}
+\label{sec:org6d9fe31}
 Ο βιοαντιδραστήρας αυτός είναι μία από τις βασικές διεργασίες της εργασίας. Σκοπός του είναι να παράξει γλυκερόλη από γλυκόζη μέσω μικροοργανισμών. Επιλέχθηκε η χρήση του μικροοργανισμού C. glycerinogenes για την διεργασία αυτή και για αυτόν βρέθηκαν δύο βασικά πειράματα τα οποία βοήθησαν στην προσομοίωση του αντιδραστήρα \cite{zhugeGlycerolProductionNovel2001,jinByproductFormationNovel2003} . Αρχικά έγινε μία απλοποιημένη προσομοίωση όπου υποτέθηκε πως γλυκόζη και οξυγόνο δίνουν γλυκερόλη, διοξείδιο του άνθρακα και νερό και μόλις περάστηκε αυτή στο Aspen, δοκιμάστηκε η προσομοίωση της συνολικής αντίδρασης, όπου λαμβάνει υπόψην την βιομάζα, την πηγή αζώτου και τα παραπροιόντα.
 
 Στην συνολική αυτή αντίδραση, τροφοδοτούμε τον αντιδραστήρα με υδατικό διάλυμα γλυκόζης και ουρίας δεδομένων συγκεντρώσεων καθώς και οξυγόνο. Στην βιβλιογραφία, αναφέρεται πως για την σωστή πραγματοποίηση της αντίδρασης, απαιτείται και κάποιο θρεπτικό μέσο όπως το Corn Steep Liquor. Αυτό είναι ένα "καλά ορισμένο" υγρό αλλά δεν υπάρχει στις βάσεις δεδομένων του Aspen. Ως αποτέλεσμα, πρέπει να περαστεί ως Conventional component όπου θα οριστούν από τον χρήστη όλες οι ιδιότητες του. Αυτό δημιουργεί προβλήματα επειδή κάποιες από τις ιδιότητες που ζητούνται δεν μπόρεσαν να βρεθούν και υποτέθηκαν ίσες με τις αντίστοιχες για το νερό. Η προσομοίωση αυτή έτρεξε με Warning ότι η αντίδραση έχει μη μηδενικό ρυθμό ένω έχει καταναλωθεί όλο το οξυγόνο (το οποίο είναι αντιδρών). Αυτό προκύπτει με το οξυγόνο που τροφοδοτείται για να τρέξει η προσομοίωση χωρίς CSL, το οποίο βρέθηκε αρκετό για να γίνει αντίδραση και να μην έχει πολύ περίσσεια. Σύμφωνα με το warning αυτό, για την αντίδραση με CSL θέλουμε περισσότερο οξυγόνο. Όμως, αν αλλάξει έστω και ελάχιστα η ποσότητα οξυγόνου, το warning αυτό γίνεται 3 errors. Για αυτό, το αρχείο complete\textsubscript{bioreactor} δεν το συμπεριλαμβάνει.
@@ -125,17 +237,17 @@ Steam Explosion\\
 \end{table}
 
 \subsection{Απορίες}
-\label{sec:orgdc7da12}
+\label{sec:orgb5a9740}
 \begin{enumerate}
 \item Το ρεύμα εξόδου από τον βιοαντιδραστήρα είναι περίπου 70\% νερό κατά μάζα. Για αυτό, σκεφτόμασταν μήπως αξίζει πριν τον καθαρισμό της γλυκερόλης από τα άλλα προιόντα της αντίδρασης να γίνει μία ξήρανση. Αρχικά, πως σας ακούγεται αυτό σαν ιδέα; Όμως, στο Model Palette του Aspen δεν βλέπω κάτι σαν ξηραντήρα άρα ήθελα να σας ρωτήσω και πως μπορούμε να προσομοιώσουμε την ξήρανση στο λογισμικό. Φαντάζομαι πως καθώς η ξήρανση είναι ένα φαινόμενο που έχει κινητική, η προσομοίωση θα γίνει σε έναν αντιδραστήρα, αλλά και πάλι δεν είμαι σίγουρος πως θα το κάναμε αυτό καθώς πως ακριβώς ορίζουμε την "στοιχειομετρία" για κάτι τέτοιο.
 \end{enumerate}
 
 \subsection{Σχόλια}
-\label{sec:org2c52527}
+\label{sec:org378f78f}
 Η προσομοίωση του βιοαντιδραστήρα δίνει χρόνο λειτουργίας πολύ μικρότερο του βιβλιογραφικού. Αυτό συμβαίνει λόγω παραδοχών που έγιναν κατά τους υπολογισμούς και συγκεκριμένα βασικό πρόβλημα είναι πως έχει υποτεθεί πως παράγεται πολύ περισσότερη βιομάζα από ότι παράγεται πραγματικά, το οποίο αυξάνει πάρα πολύ τον ρυθμό. Εν τέλει όμως, διαπιστώθηκε πως υπάρχουν τα δεδομένα για να βρεθεί ο στοιχειομετρικός συντελεστής της βιομάζας (δηλαδή η ποσότητα βιομάζας στην έξοδο του αντιδραστήρα). Αλλαγή της στοιχειομετρίας της αντίδρασης, θα προκαλέσει αλλαγή στον τύπο της βιομάζας ο οποίος παράγεται, με αποτέλεσμα να πρέπει να ξαναγίνουν αρκετοί υπολογισμοί. Λόγω χρόνου, η προσομοίωση θα διορθωθεί μετά την πρόοδο.
 
 \section{Απομάκρυνση αζωτούχων από τα προϊόντα της βιοαντίδρασης}
-\label{sec:org38f248f}
+\label{sec:org3a1d37f}
 Σύμφωνα με τους \cite{wallersteinMethodRecoveringGlycerol1946} , για την πιό αποτελεσματική απόσταξη των προιόντων της ζύμωσης, πρέπει πρώτα να απομακρυνθούν όλα τα αζωτούχα συστατικά στην έξοδο του βιοαντιδραστήρα. Για την διεργασία αυτή δεν βρέθηκαν άλλα δεδομένα, αλλά σύμφωνα με το παραπάνω, απαιτείται λιγνίνη η οποία μπορεί να δημιουργήσει σύμπλοκα με τα αζωτούχα συστατικά και μετά, με οξίνιση του διαλύματος, οι ενώσεις αυτές να δημιουργήσουν ίζημα. Η προσομοίωση της διεργασίας αυτής είναι ιδιαίτερα δύσκολη λόγω της έλλειψης αυτής δεδομένων.
 
 Το ρεύμα εισόδου εδώ είναι όλα τα αζωτούχα συστατικά στην έξοδο (πλην της βιομάζας που είναι εξαρχής στερεή και μπορεί να απομακρυνθεί εύκολα). Αυτά είναι η υπολειπόμενη ουρία και οι πρωτείνες (χάριν ευκολίας μοντελοποιήθηκαν όλες ως αλανίνη, η οποία είναι η επικρατέστερη) και αμμωνία του CSL. Οι ποσότητες πάρθηκαν από την προσομοίωση της βιοαντίδρασης με το CSL παρόλο που αυτή τρέχει με ένα warning.
@@ -164,19 +276,46 @@ Steam Explosion\\
 \end{table}
 
 \subsection{Απορίες}
-\label{sec:orgc60e421}
+\label{sec:orge6ca80a}
 \begin{enumerate}
 \item Λόγω των ελάχιστων δεδομένων που υπάρχουν για την αντίδραση, όπως θεωρώ έγινε κατανοητό, η προσομοίωση δεν ήταν ιδιαίτερα ακριβής ή ολοκληρωμένη. Θεωρείται αξίζει να την λάβουμε υπόψην στο τελικό διάγραμμα ροής, ή δεν αξίζει τον κόπο;
 \end{enumerate}
 
+\section{Καθαρισμός Γλυκερόλης}
+\label{sec:org053deb0}
+Μετά την διήθηση και την απομάκρυνση των αζωτούχων, υπάρχουν στο ρεύμα αιθανόλη, οξικό οξύ και γλυκερόλη διαλυμένα σε νερό. Η αιθανόλη και το οξικό οξύ είναι πολύ πτητικές ενώσεις σε σχέση με τη γλυκερόλη για αυτό μπορούν να απομακρυνθούν εύκολα με ένα flash. To flash καταφέρνει να διαχωρίσει το ρεύμα και στον πυθμένα υπάρχει διάλυμα γλυκερόλης-νερού σε σύσταση 74-26. Για να γίνει αυτό, η τροφοδοσία μπήκε στους 150 \(^oC\) και το flash λειτουργούσε σε θερμοκρασία 140 \(^oC\) και πίεση 1 atm.
+
+Για τον διαχωρισμό αυτών χρησιμοποιήθηκε μία αποστακτική στήλη. Η προσομοίωση έγινε αρχικά σε dstwu κολώνα και έπειτα σε radfrac με στόχο το προιόν πυθμένα να είναι 0.9999 γλυκερόλη. Τα αποτελέσματα της προσομοίωσης έδειξαν πως η στήλη μπορεί να λειτουργήσει στις ίδιες συνθήκες με το flash, με πτώση πίεσης κατά μήκους της στήλης 0.1 atm (0.95 atm στην κορυφή και 1.05 atm στον πυθμένα). Οι βαθμίδες της στήλης είναι 4 ενώ η τροφοδοσία μπαίνει πάνω από την δεύτερη. Τέλος, o λόγος αναρροής στην στήλη είναι R = 0.16.
+
+Παρακάτω παρατίθενται πινακοποιημένες πληροφορίες για την προσομοίωση.
+
+\begin{table}[htbp]
+\caption{Πληροφορίες σχετικά με τον καθαρισμό της γλυκερόλης}
+\centering
+\begin{tabular}{l}
+\hline
+Καθαρισμός Γλυκερόλης\\
+\hline
+Θερμοδυναμικό Μοντέλο - NRTL-HOC\\
+Μοντέλα Διαχωριστήρων - Flash και Radfrac\\
+Ρεύματα:\\
+\hline
+Υδατικό διάλυμα οξικού οξέος, αιθανόλης και γλυκερόλης\\
+\hline
+Καθαρή γλυκερόλη, νερό και υδατικό διάλυμα οξικού οξέος\\
+και αιθανόλης\\
+\hline
+\end{tabular}
+\end{table}
+
 \section{Γενικές απορίες}
-\label{sec:orgc0b839a}
+\label{sec:org7bf68fe}
 \begin{enumerate}
-\item Προσομοιώνοντας ξεχωριστά την κάθε διεργασία έχουμε επιλέξει διαφορετικά μοντέλα για την κάθε αντίδραση ανάλογα με τις συνθήκες στις οποίες διεξάγονται και τις ενώσεις που παίρνουν μέρος. Έχει χρησιμοποιηθεί SRK για τα συστήματα υψηλής πίεσης (πχ Steam Explosion), NRTL-HOC για τα συστήματα όπου υπάρχει οργανικό οξύ (βιοαντιδραστήρας και καθαρισμός της γλυκερόλης) και NRTL για τα υπόλοιπα. Θεωρείται θα δημιουργήσει πρόβλημα αυτό όταν προσπαθήσουμε να ενώσουμε όλες τις διεργασίες;
+\item Προσομοιώνοντας ξεχωριστά την κάθε διεργασία έχουμε επιλέξει διαφορετικά μοντέλα για την κάθε αντίδραση ανάλογα με τις συνθήκες στις οποίες διεξάγονται και τις ενώσεις που παίρνουν μέρος. Έχει χρησιμοποιηθεί SRK για τα συστήματα υψηλής πίεσης (πχ Steam Explosion), NRTL-HOC για τα συστήματα όπου υπάρχει οργανικό οξύ (βιοαντιδραστήρας και καθαρισμός της γλυκερόλης) και NRTL για τα υπόλοιπα. Είδαμε στο UI του Aspen πως υπάρχει τρόπος να αλλάξουμε το θερμοδυναμικό μοντέλο για τις επιμέρους διεργασίες. Θεωρείται θα δημιουργήσει πρόβλημα αυτό όταν προσπαθήσουμε να ενώσουμε όλες τις διεργασίες;
 \end{enumerate}
 
 \section{Βιβλιογραφία}
-\label{sec:org8702af4}
+\label{sec:org73df5da}
 \bibliography{../../../../../../Sync/My_Library}
 \bibliographystyle{unsrt}
 \end{document}
